Working version of ETC explorer.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,9 +8,9 @@ html(lang="en")
     
     meta(name='description', content='Block explorer for the Parity blockchain')
     meta(name='author', content='seungjlee')
-    meta(name='keywords', content='musicoin, ethereum, explorer, blockchain, etherchain, cryptocurrency, cryptocurrencies, bitcoin')
+    meta(name='keywords', content='classic, musicoin, ethereum, explorer, blockchain, etherchain, cryptocurrency, cryptocurrencies, bitcoin')
         
-    title Musicoin Block Explorer
+    title Ethereum Classic Block Explorer
     
     link(href=config.bootstrapUrl, rel="stylesheet", crossorigin="anonymous")    
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -25,7 +25,7 @@ html(lang="en")
             span.icon-bar
             span.icon-bar
           |  
-          a.navbar-brand(href='/') Musicoin Block Explorer
+          a.navbar-brand(href='/') Ethereum Classic Block Explorer
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
@@ -64,15 +64,15 @@ html(lang="en")
       hr
       footer
         p  
-          a(href="https://github.com/seungjlee/MusicoinExplorer") Musicoin Block Explorer
+          a(href="https://github.com/seungjlee/MusicoinExplorer/tree/etc") Ethereum Classic Block Explorer
           |  | #{nodeStatus.version} | #{nodeStatus.nbrPeers} Peers connected
         p 
           h6
             b Donations:
         p
           h6
-            b MUSIC:
-            |  0x00297dbED0856C7915B91CB88A61E1930156a330
+            b ETC:
+            |  0x003a4f56b9d740c142bc72724fb11a2a6d6e70d5
         p
           h6
             b BTC:
